# AIoT-Demos

./: CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md
5G+AI/: README.md
5G+AI/AI_PC/: README.md
5G+AI/Android/: README.md
5G+AI/CloudAI-Playground/: README.md
5G+AI/Connectivity/: README.md
5G+AI/IoT-Robotics/: README.md
CV/: README.md
CV/people_detection/bitbake_files/: qcom-gst-ai-people-detection.bb
CV/people_detection/client-application/: Makefile
CV/people_detection/client-application/src/: receive_people_count.c
CV/people_detection/gst-ai-people-detection/: CMakeLists.txt  main.c
CV/people_detection/gst-plugin-mlvpeopledetection/: CMakeLists.txt  mlvdetection.c  mlvdetection.h
CV/people_detection/gst-plugin-mlvpeopledetection/modules/: ml-vdetection-yolo-nas.c
CV/people_detection/gst-plugin-mlvpeopledetection/roi/: roi_config.h
CV/people_detection/gst-plugin-mlvpeopledetection/socket_utils/: socket_utils.c
CV_VR/: README.md
CV_VR/AI_PC/: README.md
CV_VR/Android/: README.md
CV_VR/CloudAI-Playground/: README.md
CV_VR/Connectivity/: README.md
CV_VR/IoT-Robotics/: README.md
CV_VR/IoT-Robotics/people_detection/: README.md
CV_VR/IoT-Robotics/people_detection/bitbake_files/: qcom-gstreamer1.0-plugins-oss-mlvpeopledetection.bb
CV_VR/IoT-Robotics/people_detection/client-application/src/: receive_people_count.c
CV_VR/IoT-Robotics/people_detection/gst-plugin-mlvpeopledetection/: .gitignore  publish_people_count.c  publish_people_count.h
CV_VR/IoT-Robotics/people_detection/gst-plugin-mlvpeopledetection/modules/: CMakeLists.txt  ml-vdetection-yolov8.c
CV_VR/IoT-Robotics/people_detection/gst-plugin-mlvpeopledetection/roi/: roi.c  roi.h  roi_config.h
CV_VR/IoT-Robotics/people_detection/gst-plugin-mlvpeopledetection/socket_utils/: socket_utils.h
GenAI/: README.md
GenAI/AI_PC/: README.md
GenAI/Android/: README.md
GenAI/CloudAI-Playground/: README.md
GenAI/CloudAI-Playground/ChatBot_LLM_RAG/: .gitignore  README.md  requirements.txt
GenAI/CloudAI-Playground/ChatBot_LLM_RAG/src/: ChatApp.py
GenAI/Connectivity/: README.md
GenAI/IoT-Robotics/: README.md
Hardware/: AI_PC.md  Android.md  Cloud AI Playground.md  Connectivity.md  IoT-Robotics.md  README.md  Tools.md
LLM+RAG/: README.md
Others/: README.md
Others/AI_PC/: README.md
Others/Android/: README.md
Others/CloudAI-Playground/: README.md
Others/Connectivity/: README.md
Others/IoT-Robotics/: README.md
(+6 files in other folders)
